# django-with-celery

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env  pyproject.toml
apps/account/: admin.py  backends.py  decorators.py  facade.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/account/templates/account/: login.html  register.html
apps/common/: urls.py  views.py
apps/common/templates/common/: index.html
core/: __init__.py  celery.py  settings.py  urls.py
templates/base_templates/: base.html
templates/base_templates/partials/: _navbar.html
templates/static/base/css/: base.css
